Add a simple API to view the scraped sandboxes

--- a/Pipfile
+++ b/Pipfile
@@ -13,3 +13,5 @@ python_version = "3.11"
 python_full_version = "3.11.4"
 scrapy = "2.10.*"
 scrapy-djangoitem = "1.1.*"
+djangorestframework = "3.14.0"
+markdown = "3.4.*"
