Added empty data processing app for future use

--- a/Pipfile
+++ b/Pipfile
@@ -15,3 +15,5 @@ scrapy = "2.10.*"
 scrapy-djangoitem = "1.1.*"
 djangorestframework = "3.14.0"
 markdown = "3.4.*"
+pandas = "2.0.*"
+matplotlib = "3.8.*"
